tests/golden/type_errors/re_export_duplicate_two_sources.cd
export value from "../re_export_direct/lib.cd";
export value from "../re_export_duplicate_source/lib.cd";
