tests/golden/type_errors/re_export_duplicate_two_sources.err
Type error at <repo>/tests/golden/type_errors/re_export_duplicate_two_sources.cd:2:8: duplicate export `value`
